--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-trello-web-base-project",
+  "name": "trello-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
