--- a/backEnd/.env
+++ b/backEnd/.env
@@ -2,3 +2,6 @@ MONGODB_URI = 'mongodb+srv://minhthieu2113:Mt.20112003@cluster0.dcl9sgo.mongodb.
 DATABASE_NAME = 'TLU_Trello'
 APP_HOST='localhost'
 APP_PORT=2113
+
+WEBSITE_DOMAIN_DEV='http://localhost:5173'
+WEBSITE_DOMAIN_PRO='http://trungquandev.com'
