--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
+    "@getbrevo/brevo": "^2.0.0-beta.4",
     "async-exit-hook": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^17.0.1",
@@ -26,7 +28,8 @@
     "joi": "^17.10.2",
     "kill-port": "^2.0.1",
     "lodash": "^4.17.21",
-    "mongodb": "^6.0.0"
+    "mongodb": "^6.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
@@ -35,6 +38,7 @@
     "@babel/node": "^7.22.10",
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "@types/bcryptjs": "^2.4.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.47.0",
     "nodemon": "^3.0.1"
