--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,12 +23,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^3.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3"
+    "react-hook-form": "^7.60.0",
+    "react-redux": "^9.0.1",
+    "react-router-dom": "^6.21.3",
+    "react-toastify": "^9.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
